# siranga

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  test.yaml
.cargo/: audit.toml
.gitea/workflows/: build.yaml
helper/: k8s.yaml
manifests/: access-control-rule.yaml  certificate.yaml  config-map-authelia-acl.yaml  deployment.yaml  ingress-route.yaml  kustomization.yaml  namespace.yaml  secret-siranga-key.yaml  secret-tunnel-key.yaml  service-user.yaml  service.yaml
src/: animals.rs  animals.txt  auth.rs  cli.rs  handler.rs  helper.rs  input.rs  keys.rs  ldap.rs  lib.rs  main.rs  server.rs  ssh.rs  stats.rs  tui.rs  tunnel.rs  units.rs  version.rs  web.rs  wrapper.rs
src/helper/: animals.rs  mod.rs
src/io/: mod.rs  stats.rs  terminal_handle.rs
src/ssh/: handler.rs  mod.rs  renderer.rs
src/tunnel/: mod.rs  registry.rs  tui.rs
src/web/: auth.rs  mod.rs  response.rs
