[package]
name = "tunnel_rs"
version = "0.1.0"
edition = "2024"
default-run = "tunnel_rs"

[dependencies]
bytes = "1.10.1"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
rand = "0.8.5"
russh = "0.51.1"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
