[package]
name = "siranga"
edition = "2024"
default-run = "siranga"
license = "AGPL-3.0-only"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.35", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures = "0.3.31"
git-version = "0.3.9"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
ldap3 = "0.11.5"
pin-project-lite = "0.2.16"
rand = "0.8.5"
ratatui = { version = "0.29.0", features = ["unstable-backend-writer"] }
reqwest = { version = "0.12.15", features = ["rustls-tls"] }
russh = "0.51.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
unicode-width = "0.2.0"
